--- a/help.html
+++ b/help.html
@@ -60,9 +60,6 @@
 
     <main role="main">
         <!-- <section class="ui-section-hero">
-            <div class="ui-layout-column-center" >
-              <h3><mark><a href="https://cscw.acm.org/2022/submit/papers.html">Call for Papers for CSCW 2022 is due on July 15, 2021. Click more here</a></mark></h3>
-            </div>
           </section> -->
         <section class='ui-section-feature'>
             <div class='ui-layout-container'>
@@ -79,7 +76,7 @@
 
                 <p>“The IDEA Engineering Student Center, located just off the lobby of Jacobs Hall, is a hub for student engagement, academic enrichment, personal/professional development, leadership, community involvement, and a respectful learning environment for all.  The Center offers a variety of programs, listed in the IDEA Center Facebook page at <a href="http://www.facebook.com/ucsdidea/"><strong>http://www.facebook.com/ucsdidea/</strong></a> (you are welcome to Like this page!) and the Center web site at <a href="http://idea.ucsd.edu/">http://idea.ucsd.edu/</a>.  The IDEA Center programs support both undergraduate students and graduate students.”</p>
 
-                <h3>Recruiting</h3>
+                <h3>Diversity and Inclusion</h3>
                 <p>We are committed to fostering a learning environment for this course that supports a diversity of thoughts, perspectives and experiences, and respects your identities (including race, ethnicity, heritage, gender, sex, class, sexuality, religion, ability, age, educational background, etc.).  Our goal is to create a diverse and inclusive learning environment where all students feel comfortable and can thrive. <br><br>
 				Our instructional staff will make a concerted effort to be welcoming and inclusive to the wide diversity of students in this course.  If there is a way we can make you feel more included please let one of the course staff know, either in person (or on zoom), via email/discussion board, or even in a note under the door (or our e-mail inboxes).  Our learning about diverse perspectives and identities is an ongoing process, and we welcome your perspectives and input. <br><br>
 				We also expect that you, as a student in this course, will honor and respect your classmates, abiding by the UCSD Principles of Community (<a href="https://ucsd.edu/about/principles.html"><strong>https://ucsd.edu/about/principles.html)</strong></b>.  Please understand that others’ backgrounds, perspectives and experiences may be different than your own, and help us to build an environment where everyone is respected and feels comfortable.
