--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   
 <head>
     <!-- META -->
+<meta http-equiv="refresh" content="1; https://rabeshi.github.io/cse30/"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="uisual" content="Made with Uisual (uisual.com)">
